addresses deployment errors

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,6 +17,12 @@
       "@/*": ["./src/*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
+  "include": [
+    "next-env.d.ts",
+    "**/*.ts",
+    "**/*.tsx",
+    "src/components/TennisCourtList.jsx",
+    "src/components/TennisCourtCard.jsx"
+  ],
   "exclude": ["node_modules"]
 }
